--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
+  dio: ^5.2.1
   google_fonts: ^6.1.0
   image_picker: ^1.0.7
-
+  shared_preferences: ^2.5.4
+  intl: ^0.20.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  
 
 dev_dependencies:
   flutter_test:
