--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.tb_gudangmng">
 <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="tb_gudangmng"
+        android:label="Warehouse Manager"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
